# led-frame-remote

./: .gitignore  CMakeLists.txt  led-frame-mobile.pro  led-frame-remote.pro  main.cpp
android/: AndroidManifest.xml
core/networking/: broadcast-monitor.cpp  broadcast-monitor.h
js/: functions.js
qml/: ApplicationDrawer.qml  ApplicationHeader.qml  ColorGrid.qml  Configuration.qml  ConnectionDelegate.qml  CustomSliderStyle.qml  DeviceControlPage.qml  DeviceCorrectorPage.qml  DeviceItem.qml  DeviceListPage.qml  DeviceWaitPage.qml  LedFrameConfiguration.qml  WaitPage.qml  device-connected.qml  main.qml  qml.qrc  qtlabscontrols.conf  qtquickcontrols2.conf  wait-for-connection.qml
qml/components/: CustomSliderStyle.qml  DefaultLabel.qml  DefaultRectangle.qml  DisplayIcon.qml  MenuButton.qml  PrettyLabel.qml
qml/components/labels/: AbstractLabel.qml  LargeLabel.qml  MediumLabel.qml  SmallLabel.qml
qml/components/layouts/: LayoutExpander.qml
qml/delegates/: BaseDelegate.qml  CorrectorDelegate.qml  DeviceDelegate.qml  EmitterDelegate.qml
qml/delegates/custom/: Description.qml
qml/emitters/: EmitterControlPage.qml
resources/: resources.qrc
